@@ -9594,6 +9594,25 @@
 			   (match_dup 0)
 			   (pc)))]
   "")
+
+;; Convert setcc + movzbl to xor + setcc if operands don't overlap.
+
+(define_peephole2
+  [(set (reg 17) (match_operand 0 "" ""))
+   (set (match_operand:QI 1 "register_operand" "")
+	(match_operator:QI 2 "ix86_comparison_operator"
+	  [(reg 17) (const_int 0)]))
+   (set (match_operand 3 "q_regs_operand" "")
+	(zero_extend (match_dup 1)))]
+  "peep2_reg_dead_p (3, operands[1])
+   && ! reg_overlap_mentioned_p (operands[3], operands[0])"
+  [(parallel [(set (match_dup 3) (const_int 0))
+	      (clobber (reg:CC 17))])
+   (set (match_dup 4) (match_dup 0))
+   (set (strict_low_part (match_dup 5))
+	(match_dup 2))]
+  "operands[4] = gen_rtx_REG (GET_MODE (operands[0]), 17);
+   operands[5] = gen_rtx_REG (QImode, REGNO (operands[3]));")
 
 ;; Call instructions.
 
